Testando inserção de tags no corpo da página

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="topo">
                 <!-- Inicio Menu Desktop -->
                 <nav>
-                    <div class="nav-wrapper blue">
+                    <div class="nav-wrapper blue z-depth-2">
                         &nbsp;<a href="index.html" class="brand-logo"><i class="material-icons">grid_on</i>2048</a>
                         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                         <ul class="right hide-on-med-and-down">
@@ -52,8 +52,13 @@
             <!-- Fim do Menu -->
 
             <!-- Inicio do Corpo -->
-            <div class="corpo col s12">
-                
+            <div class="corpo col s12 blue">
+                <div class="col s6 red center center-align">
+                    <h1>Lol</h1>
+                </div>
+                <div class="col s6 blue center center-align">
+                    <h1>Dota</h1>
+                </div>
             </div>
             <!-- Fim do corpo -->
 
