Atualizado menu do index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
                         <ul class="right hide-on-med-and-down">
                             <li><a href="index.html">Inicio</a></li>
-                            <li><a href="sobre.html">Sobre</a></li>
+                            <li><a href="sobre.html">Sobre o Programa</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -44,7 +44,7 @@
                 <!-- Inicio Menu Mobile -->
                 <ul class="sidenav" id="mobile-demo">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="sobre.html">Sobre o Programa</a></li>
                 </ul>
                 <!-- Fim Menu Mobile -->
 
