Concluida função de movimentação do tabuleiro

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <https://www.gnu.org/licenses/>. 
 -->
-<html style="background-color: #2196F3;">
+<html style="background-color: #2196F3;" onkeydown="mover_tabuleiro(event);">
     <head>
         <link href="css/material_icons.css" rel="stylesheet">
         <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
